# imapped-lightmode

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  architecture.md  config.example.toml  deployment.md  docker-compose.prod.yml  docker-compose.yml  protocol-notes.md
.github/workflows/: release-docker.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/coordination/: Cargo.toml
crates/coordination/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: domain.rs  error.rs  lib.rs  security.rs  storage.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  repository.rs
crates/imap-server/: Cargo.toml
crates/imap-server/src/: http.rs  imap.rs  lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/mime/: Cargo.toml
crates/mime/src/: lib.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: filesystem.rs  lib.rs  memory.rs  r2.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/upstream/: Cargo.toml
crates/upstream/src/: lib.rs
migrations/: 0001_initial.sql  0002_sync_state_unique.sql  0003_quota_uniqueness.sql  0004_cache_objects_account_scoped_unique.sql
src/: admin.rs  auth.rs  config.rs  coordination.rs  domain.rs  error.rs  lib.rs  main.rs  metrics.rs  mime.rs  notifications.rs  security.rs
src/db/: mod.rs  repository.rs
src/protocol/: mod.rs
src/search/: mod.rs
src/storage/: filesystem.rs  memory.rs  mod.rs  r2.rs
src/sync/: mod.rs
src/upstream/: mod.rs
tests/: admin.rs  app_services.rs  config.rs  imap_protocol.rs  live_upstream.rs  metrics.rs  mime.rs  mutations.rs  postgres_repo.rs  r2_object_store.rs  redis_integration.rs  search.rs  storage.rs  sync_engine.rs  sync_ingest.rs
