[package]
name = "imap-cache-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
imap-cache-config = { path = "../config" }
imap-cache-core = { path = "../core" }
imap-cache-db = { path = "../db" }
async-trait = "0.1"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "macros"] }
uuid = { version = "1", features = ["v4"] }
