[package]
name = "imap-cache-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "json", "postgres"] }
thiserror = "2"
toml = "0.8"
