[package]
name = "imap-cache-db"
version = "0.1.0"
edition = "2024"

[dependencies]
imap-cache-core = { path = "../core" }
imap-cache-notifications = { path = "../notifications" }
imap-cache-upstream = { path = "../upstream" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
