[package]
name = "imap-cache-imap-server"
version = "0.1.0"
edition = "2024"

[dependencies]
imap-cache-core = { path = "../core" }
imap-cache-auth = { path = "../auth" }
imap-cache-config = { path = "../config" }
imap-cache-coordination = { path = "../coordination" }
imap-cache-db = { path = "../db" }
imap-cache-metrics = { path = "../metrics" }
imap-cache-mime = { path = "../mime" }
imap-cache-notifications = { path = "../notifications" }
imap-cache-search = { path = "../search" }
imap-cache-storage = { path = "../storage" }
imap-cache-protocol = { path = "../protocol" }
imap-cache-upstream = { path = "../upstream" }
imap-cache-sync = { path = "../sync" }
anyhow = "1"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
argon2 = "0.5"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
chacha20poly1305 = "0.10"
futures = "0.3"
hex = "0.4"
mailparse = "0.15"
rand = "0.8"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
rustls = "0.23"
rustls-pemfile = "2"
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
webpki-roots = "0.26"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
imap-cache-test-support = { path = "../test-support" }
rcgen = "0.13"
tempfile = "3"
