[package]
name = "imap-cache-notifications"
version = "0.1.0"
edition = "2024"

[dependencies]
imap-cache-core = { path = "../core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
