[package]
name = "imap-cache-search"
version = "0.1.0"
edition = "2024"

[dependencies]
imap-cache-core = { path = "../core" }
imap-cache-mime = { path = "../mime" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde_json = "1"
sha2 = "0.10"
tantivy = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
