[package]
name = "imap-cache-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
imap-cache-core = { path = "../core" }
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime-api = "1"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
