[package]
name = "imap-cache-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
imap-cache-core = { path = "../core" }
imap-cache-coordination = { path = "../coordination" }
imap-cache-db = { path = "../db" }
imap-cache-mime = { path = "../mime" }
imap-cache-notifications = { path = "../notifications" }
imap-cache-search = { path = "../search" }
imap-cache-storage = { path = "../storage" }
imap-cache-upstream = { path = "../upstream" }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
